# elegant_totp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: elegant_totp.h
